--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     }
 
     .box.bg1{background:rgba(255,255,255,0.78) url('FONDO1.jpg') center/cover no-repeat;} /* Cambia imagen */
-    .box.bg2{background:rgba(255,255,255,0.78) url('FONDO2.jpg') center/cover no-repeat;} /* Cambia imagen */
+    .box.bg2{background:rgba(255,255,255,0.78) url('FONDO2.png') center/cover no-repeat;} /* Cambia imagen */
     .box.bg3{background:rgba(255,255,255,0.78) url('FONDO4.jpg') center/cover no-repeat;} /* Cambia imagen */
 
     h1{font-family:'Fredoka One';font-size:2.3rem;text-align:center;margin-top:10px}
