--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     .box.bg1{background:rgba(255,255,255,0.78) url('FONDO1.jpg') center/cover no-repeat;} /* Cambia imagen */
     .box.bg2{background:rgba(255,255,255,0.78) url('FONDO2.png') center/cover no-repeat;} /* Cambia imagen */
     .box.bg3{background:rgba(255,255,255,0.78) url('FONDO4.jpg') center/cover no-repeat;} /* Cambia imagen */
+    .box.bg4{background:rgba(255,255,255,0.78) url('FONDO5.jpg') center/cover no-repeat;} /* Cambia imagen */
 
     h1{font-family:'Fredoka One';font-size:2.3rem;text-align:center;margin-top:10px}
 
@@ -123,7 +124,7 @@
   <a href="https://maps.app.goo.gl/75C3GWKKCqGDRBM1A" target="_blank">Ver Ubicación</a>
 </div>
 
-<div class="box bg2">
+<div class="box bg4">
   <h2>🕓 Horario</h2>
   <p>17:30 a 20:00 hs</p>
 </div>
