--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
     /* --- GALERÍA / CARRUSEL --- */
     .slider{max-width:380px;margin:40px auto;border-radius:18px;overflow:hidden;position:relative;z-index:2;box-shadow:0 4px 20px rgba(0,0,0,.25)}
-    .track{display:flex;animation:scroll 80s linear infinite}
+    .track{display:flex;animation:scroll 140s linear infinite}
     .slider img{width:100%;object-fit:cover;transition:transform .5s ease;border-radius:15px}
     .slider img:hover{transform:scale(1.05)}
 
-    @keyframes scroll{from{transform:translateX(0)}to{transform:translateX(-3500%)}}
+    @keyframes scroll{from{transform:translateX(0)}to{transform:translateX(-2000%)}}
 
     /* fotos menos invasivas en móviles */
     @media(max-width:600px){
@@ -135,6 +135,7 @@
     <img src="FOTO1.jpeg"><img src="FOTO2.jpeg"><img src="FOTO3.jpeg"><img src="FOTO4.jpeg"><img src="FOTO5.jpeg">
     <img src="FOTO6.jpeg"><img src="FOTO7.jpeg"><img src="FOTO8.jpeg"><img src="FOTO9.jpeg"><img src="FOTO10.jpeg">
     <img src="FOTO11.jpeg"><img src="FOTO12.jpeg"><img src="FOTO13.jpeg"><img src="FOTO14.jpeg"><img src="FOTO15.jpeg">
+     <img src="FOTO16.jpeg"><img src="FOTO17.jpeg"><img src="FOTO18.jpeg"><img src="FOTO19.jpeg"><img src="FOTO20.jpeg">
   </div>
 </div>
 
