--- a/index.html
+++ b/index.html
@@ -125,7 +125,19 @@
   <h1>Mi Primer Año: Tahily</h1>
   <p style="text-align:center">¡Ven a celebrar este día tan especial el 9 de Diciembre!</p>
 
-  <div id="contador">Cargando...</div>
+  <div id="contador" style="
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-top: 10px;
+    text-align: center;
+">
+  Cargando...
+</div>
+
 </div>
 
 <div class="box bg2">
