--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
       line-height:1.4;
       padding:12px 18px;
       border-radius:18px;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
       background:rgba(0,0,0,0.35);
       color:white;
       backdrop-filter:blur(5px);
-      display:inline-block;
+      display:flex;
       margin-top:15px;
     }
   </style>
@@ -125,16 +128,7 @@
   <h1>Mi Primer Año: Tahily</h1>
   <p style="text-align:center">¡Ven a celebrar este día tan especial el 9 de Diciembre!</p>
 
-  <div id="contador" style="
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    font-size: 1.4rem;
-    font-weight: 700;
-    margin-top: 10px;
-    text-align: center;
-">
+  <div id="contador">
   Cargando...
 </div>
 
